--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   }
   #contact {
     background-color: inherit; /* This will take the background color of body */
-    color: inherit;
+    color: black;
   }
   #services {
     background-color: inherit; /* This will take the background color of body */
